2004-10-02  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c: Rewrite handling of incoming connections.  All
	are handled by one thread which then hands of the descriptors for the
	real work to the worker threads.
	* nscd/Makefile: Link nscd with librt.

	* nscd/selinux.c: Pretty printing.

	* nscd/dbg_log.c (dbg_log): Don't add unnecessary newline to
	output.  Let syslog do the formatting if debug_level == 0.

	* nscd/nscd_helper.c (get_mapping): No need to check timestamp if
	nscd_certainly_running is nonzero.

2004-10-02  Simon Josefsson  <jas@extundo.com>

	[BZ #420]
	* sysdeps/generic/memmem.c [!_LIBC]: Define __builtin_expect, to
	make the file usable inside gnulib.

2004-10-01  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (public_vALLOc): Add missing use of hooks.
	(public_pVALLOc): Likewise.

	* nscd/nscd_initgroups.c (__nscd_getgrouplist): Always add the
	group the caller provided unless there is a real problem.

	* posix/bug-glob1.c (prepare): Fix creation of symlink.

2004-09-30  Ulrich Drepper  <drepper@redhat.com>

	* posix/Makefile: Add rules to build and run bug-glob1.
	* posix/bug-glob1.c: New file.

	* iconv/iconv_prog.c (main): Print progress information to stderr.

	* nscd/nscd.c (termination_handler): Reset timestamp so that
	clients immediately stop using the database.

	* nscd/nscd-client.h (__nscd_get_map_ref): Drop volatile from last
	parameter.
	(__nscd_drop_map_ref): Change second parameter to be a reference to
	a variable.  Update variable when cycle count changed.
	* nscd/nscd_helper.c (__nscd_get_map_ref): Remove volatile here, too.
	* nscd/nscd_getai.c: Correctly use __nscd_drop_map_ref.  Reinitialize
	all variables and avoid memory leak in case of retries.
	* nscd/nscd_getgr_r.c: Likewise.
	* nscd/nscd_gethst_r.c: Likewise.
	* nscd/nscd_getpw_r.c: Likewise.
	* nscd/nscd_initgroups.c: Likewise.

	* nscd/nscd.h: Add declaration of addinitgroups and
	readdinitgroups.

2004-09-30  Andreas Jaeger  <aj@suse.de>
