@@ -70,28 +70,28 @@ CFLAGS-nscd_getai.c = -fexceptions
 CFLAGS-nscd_initgroups.c = -fexceptions
 
 ifeq (yesyes,$(have-fpie)$(build-shared))
-CFLAGS-nscd.c = -fpie
-CFLAGS-connections.c = -fpie
-CFLAGS-pwdcache.c = -fpie
-CFLAGS-getpwnam_r.c = -fpie
-CFLAGS-getpwuid_r.c = -fpie
-CFLAGS-grpcache.c = -fpie
-CFLAGS-getgrnam_r.c = -fpie
-CFLAGS-getgrgid_r.c = -fpie
-CFLAGS-hstcache.c = -fpie
-CFLAGS-gethstbyad_r.c = -fpie
-CFLAGS-gethstbynm2_r.c = -fpie
-CFLAGS-dbg_log.c = -fpie
-CFLAGS-nscd_conf.c = -fpie
-CFLAGS-nscd_stat.c = -fpie
-CFLAGS-cache.c = -fpie
-CFLAGS-xmalloc.c = -fpie
-CFLAGS-xstrdup.c = -fpie
-CFLAGS-mem.c = -fpie
-CFLAGS-nscd_setup_thread.c = -fpie
-CFLAGS-aicache.c = -fpie
-CFLAGS-selinux.c = -fpie
-CFLAGS-initgrcache.c = -fpie
+CFLAGS-nscd.c += -fpie
+CFLAGS-connections.c += -fpie
+CFLAGS-pwdcache.c += -fpie
+CFLAGS-getpwnam_r.c += -fpie
+CFLAGS-getpwuid_r.c += -fpie
+CFLAGS-grpcache.c += -fpie
+CFLAGS-getgrnam_r.c += -fpie
+CFLAGS-getgrgid_r.c += -fpie
+CFLAGS-hstcache.c += -fpie
+CFLAGS-gethstbyad_r.c += -fpie
+CFLAGS-gethstbynm2_r.c += -fpie
+CFLAGS-dbg_log.c += -fpie
+CFLAGS-nscd_conf.c += -fpie
+CFLAGS-nscd_stat.c += -fpie
+CFLAGS-cache.c += -fpie
+CFLAGS-xmalloc.c += -fpie
+CFLAGS-xstrdup.c += -fpie
+CFLAGS-mem.c += -fpie
+CFLAGS-nscd_setup_thread.c += -fpie
+CFLAGS-aicache.c += -fpie
+CFLAGS-selinux.c += -fpie
+CFLAGS-initgrcache.c += -fpie
 
 $(objpfx)nscd: $(addprefix $(objpfx),$(nscd-modules:=.o))
 	$(LINK.o) -pie -Wl,-O1 \
